add trial wheel works

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <title>Dnner Spinner</title>
     <meta charset="utf-8">
 
-    <!--Bootstrap File-->
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <!--Bootstrap File- (gets rid of weird symbols)-> 
+   <!-<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
+
     <link rel="stylesheet" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -34,6 +35,8 @@
                 <div class="sec"><span class="fa fa-heart-o"></span></div>
                 <div class="sec"><span class="fa fa-star-o"></span></div>
                 <div class="sec"><span class="fa fa-lightbulb-o"></span></div>
+                <div class="sec"><span class="fa fa-extra"></span></div>
+                <div class="sec"><span class="fa fa-extra2"></span></div>
             </div>       
            
             <div id="spin">
