spinner triggered by button

--- a/trial.html
+++ b/trial.html
@@ -4,8 +4,16 @@
   <title></title>
 </head>
 <body>
+ <div id="buttons-view"></div>
 
-<input type="button" value="spin" style="float:left;" />
+      <form id="giphy-form">
+          <label for="giphy-input">Dinner Spinner</label>
+          
+          <!-- Button triggers new GIPHY to be added -->
+          <input id="add-giphy" type="submit" value="submit">
+      </form>
+
+
 <canvas id="canvas" width="500" height="500"></canvas>
 
 <script type="text/javascript">
